// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container component can step through the component's steps: Step 0, forward 1`] = `
<div
  class="makeStyles-root-5"
>
  <div
    class="MuiPaper-root MuiStepper-root MuiStepper-vertical MuiPaper-elevation0"
  >
    <div
      class="MuiStep-root MuiStep-vertical MuiStep-completed"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-vertical"
      >
        <span
          class="MuiStepLabel-iconContainer"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiStepIcon-root MuiStepIcon-completed"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 0a12 12 0 1 0 0 24 12 12 0 0 0 0-24zm-2 17l-5-5 1.4-1.4 3.6 3.6 7.6-7.6L19 8l-9 9z"
            />
          </svg>
        </span>
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiStepLabel-completed MuiTypography-body2 MuiTypography-displayBlock"
          >
            Step 1 label
          </span>
        </span>
      </span>
      <div
        class="MuiStepContent-root"
        icon="1"
      />
    </div>
    <div
      class="MuiStepConnector-root MuiStepConnector-vertical MuiStepConnector-active"
    >
      <span
        class="MuiStepConnector-line MuiStepConnector-lineVertical"
      />
    </div>
    <div
      class="MuiStep-root MuiStep-vertical"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-vertical"
      >
        <span
          class="MuiStepLabel-iconContainer"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiStepIcon-root MuiStepIcon-active"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="12"
            />
            <text
              class="MuiStepIcon-text"
              text-anchor="middle"
              x="12"
              y="16"
            >
              2
            </text>
          </svg>
        </span>
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiStepLabel-active MuiTypography-body2 MuiTypography-displayBlock"
          >
            Step 2 label
          </span>
        </span>
      </span>
      <div
        class="MuiStepContent-root"
        icon="2"
      >
        <div
          class="MuiCollapse-container MuiStepContent-transition MuiCollapse-entered"
          style="min-height: 0px; height: auto; transition-duration: 0ms;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Step 2 description
              </p>
              <div
                class="makeStyles-actionsContainer-7"
              >
                <div>
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-6"
                    data-testid="token-stepper-back"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Back
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-6 MuiButton-containedPrimary"
                    data-testid="token-stepper-next"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Next
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiStepConnector-root MuiStepConnector-vertical Mui-disabled"
    >
      <span
        class="MuiStepConnector-line MuiStepConnector-lineVertical"
      />
    </div>
    <div
      class="MuiStep-root MuiStep-vertical"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-vertical Mui-disabled"
      >
        <span
          class="MuiStepLabel-iconContainer"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiStepIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="12"
            />
            <text
              class="MuiStepIcon-text"
              text-anchor="middle"
              x="12"
              y="16"
            >
              3
            </text>
          </svg>
        </span>
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
          >
            Step 3 label
          </span>
        </span>
      </span>
      <div
        class="MuiStepContent-root MuiStepContent-last"
        disabled=""
        icon="3"
      />
    </div>
  </div>
</div>
`;

exports[`Container component can step through the component's steps: Step 1, forward 1`] = `
<div
  class="makeStyles-root-5"
>
  <div
    class="MuiPaper-root MuiStepper-root MuiStepper-vertical MuiPaper-elevation0"
  >
    <div
      class="MuiStep-root MuiStep-vertical MuiStep-completed"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-vertical"
      >
        <span
          class="MuiStepLabel-iconContainer"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiStepIcon-root MuiStepIcon-completed"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 0a12 12 0 1 0 0 24 12 12 0 0 0 0-24zm-2 17l-5-5 1.4-1.4 3.6 3.6 7.6-7.6L19 8l-9 9z"
            />
          </svg>
        </span>
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiStepLabel-completed MuiTypography-body2 MuiTypography-displayBlock"
          >
            Step 1 label
          </span>
        </span>
      </span>
      <div
        class="MuiStepContent-root"
        icon="1"
      />
    </div>
    <div
      class="MuiStepConnector-root MuiStepConnector-vertical MuiStepConnector-completed"
    >
      <span
        class="MuiStepConnector-line MuiStepConnector-lineVertical"
      />
    </div>
    <div
      class="MuiStep-root MuiStep-vertical MuiStep-completed"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-vertical"
      >
        <span
          class="MuiStepLabel-iconContainer"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiStepIcon-root MuiStepIcon-completed"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 0a12 12 0 1 0 0 24 12 12 0 0 0 0-24zm-2 17l-5-5 1.4-1.4 3.6 3.6 7.6-7.6L19 8l-9 9z"
            />
          </svg>
        </span>
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiStepLabel-completed MuiTypography-body2 MuiTypography-displayBlock"
          >
            Step 2 label
          </span>
        </span>
      </span>
      <div
        class="MuiStepContent-root"
        icon="2"
      />
    </div>
    <div
      class="MuiStepConnector-root MuiStepConnector-vertical MuiStepConnector-active"
    >
      <span
        class="MuiStepConnector-line MuiStepConnector-lineVertical"
      />
    </div>
    <div
      class="MuiStep-root MuiStep-vertical"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-vertical"
      >
        <span
          class="MuiStepLabel-iconContainer"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiStepIcon-root MuiStepIcon-active"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="12"
            />
            <text
              class="MuiStepIcon-text"
              text-anchor="middle"
              x="12"
              y="16"
            >
              3
            </text>
          </svg>
        </span>
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiStepLabel-active MuiTypography-body2 MuiTypography-displayBlock"
          >
            Step 3 label
          </span>
        </span>
      </span>
      <div
        class="MuiStepContent-root MuiStepContent-last"
        icon="3"
      >
        <div
          class="MuiCollapse-container MuiStepContent-transition MuiCollapse-entered"
          style="min-height: 0px; height: auto; transition-duration: 0ms;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Step 3 description
              </p>
              <div
                class="makeStyles-actionsContainer-7"
              >
                <div>
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-6"
                    data-testid="token-stepper-back"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Back
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-6 MuiButton-containedPrimary"
                    data-testid="token-stepper-next"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Finish
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Container component can step through the component's steps: Step 2, forward 1`] = `
<div
  class="makeStyles-root-5"
>
  <div
    class="MuiPaper-root MuiStepper-root MuiStepper-vertical MuiPaper-elevation0"
  >
    <div
      class="MuiStep-root MuiStep-vertical MuiStep-completed"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-vertical"
      >
        <span
          class="MuiStepLabel-iconContainer"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiStepIcon-root MuiStepIcon-completed"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 0a12 12 0 1 0 0 24 12 12 0 0 0 0-24zm-2 17l-5-5 1.4-1.4 3.6 3.6 7.6-7.6L19 8l-9 9z"
            />
          </svg>
        </span>
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiStepLabel-completed MuiTypography-body2 MuiTypography-displayBlock"
          >
            Step 1 label
          </span>
        </span>
      </span>
      <div
        class="MuiStepContent-root"
        icon="1"
      />
    </div>
    <div
      class="MuiStepConnector-root MuiStepConnector-vertical MuiStepConnector-completed"
    >
      <span
        class="MuiStepConnector-line MuiStepConnector-lineVertical"
      />
    </div>
    <div
      class="MuiStep-root MuiStep-vertical MuiStep-completed"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-vertical"
      >
        <span
          class="MuiStepLabel-iconContainer"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiStepIcon-root MuiStepIcon-completed"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 0a12 12 0 1 0 0 24 12 12 0 0 0 0-24zm-2 17l-5-5 1.4-1.4 3.6 3.6 7.6-7.6L19 8l-9 9z"
            />
          </svg>
        </span>
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiStepLabel-completed MuiTypography-body2 MuiTypography-displayBlock"
          >
            Step 2 label
          </span>
        </span>
      </span>
      <div
        class="MuiStepContent-root"
        icon="2"
      />
    </div>
    <div
      class="MuiStepConnector-root MuiStepConnector-vertical MuiStepConnector-completed"
    >
      <span
        class="MuiStepConnector-line MuiStepConnector-lineVertical"
      />
    </div>
    <div
      class="MuiStep-root MuiStep-vertical MuiStep-completed"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-vertical"
      >
        <span
          class="MuiStepLabel-iconContainer"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiStepIcon-root MuiStepIcon-completed"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 0a12 12 0 1 0 0 24 12 12 0 0 0 0-24zm-2 17l-5-5 1.4-1.4 3.6 3.6 7.6-7.6L19 8l-9 9z"
            />
          </svg>
        </span>
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiStepLabel-completed MuiTypography-body2 MuiTypography-displayBlock"
          >
            Step 3 label
          </span>
        </span>
      </span>
      <div
        class="MuiStepContent-root MuiStepContent-last"
        icon="3"
      >
        <div
          class="MuiCollapse-container MuiStepContent-transition"
          style="min-height: 0px; height: 0px; transition-duration: 0ms;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Step 3 description
              </p>
              <div
                class="makeStyles-actionsContainer-7"
              >
                <div>
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-6"
                    data-testid="token-stepper-back"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Back
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-6 MuiButton-containedPrimary"
                    data-testid="token-stepper-next"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Next
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root makeStyles-resetContainer-8 MuiPaper-elevation0"
  >
    <p
      class="MuiTypography-root MuiTypography-body1"
    >
      All steps completed - you're finished
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-6"
      data-testid="token-stepper-reset"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Reset
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`Container component can step through the component's steps: Step 3, forward 1`] = `
<div
  class="makeStyles-root-5"
>
  <div
    class="MuiPaper-root MuiStepper-root MuiStepper-vertical MuiPaper-elevation0"
  >
    <div
      class="MuiStep-root MuiStep-vertical MuiStep-completed"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-vertical"
      >
        <span
          class="MuiStepLabel-iconContainer"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiStepIcon-root MuiStepIcon-completed"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 0a12 12 0 1 0 0 24 12 12 0 0 0 0-24zm-2 17l-5-5 1.4-1.4 3.6 3.6 7.6-7.6L19 8l-9 9z"
            />
          </svg>
        </span>
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiStepLabel-completed MuiTypography-body2 MuiTypography-displayBlock"
          >
            Step 1 label
          </span>
        </span>
      </span>
      <div
        class="MuiStepContent-root"
        icon="1"
      />
    </div>
    <div
      class="MuiStepConnector-root MuiStepConnector-vertical MuiStepConnector-completed"
    >
      <span
        class="MuiStepConnector-line MuiStepConnector-lineVertical"
      />
    </div>
    <div
      class="MuiStep-root MuiStep-vertical MuiStep-completed"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-vertical"
      >
        <span
          class="MuiStepLabel-iconContainer"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiStepIcon-root MuiStepIcon-completed"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 0a12 12 0 1 0 0 24 12 12 0 0 0 0-24zm-2 17l-5-5 1.4-1.4 3.6 3.6 7.6-7.6L19 8l-9 9z"
            />
          </svg>
        </span>
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiStepLabel-completed MuiTypography-body2 MuiTypography-displayBlock"
          >
            Step 2 label
          </span>
        </span>
      </span>
      <div
        class="MuiStepContent-root"
        icon="2"
      />
    </div>
    <div
      class="MuiStepConnector-root MuiStepConnector-vertical MuiStepConnector-completed"
    >
      <span
        class="MuiStepConnector-line MuiStepConnector-lineVertical"
      />
    </div>
    <div
      class="MuiStep-root MuiStep-vertical MuiStep-completed"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-vertical"
      >
        <span
          class="MuiStepLabel-iconContainer"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiStepIcon-root MuiStepIcon-completed"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 0a12 12 0 1 0 0 24 12 12 0 0 0 0-24zm-2 17l-5-5 1.4-1.4 3.6 3.6 7.6-7.6L19 8l-9 9z"
            />
          </svg>
        </span>
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiStepLabel-completed MuiTypography-body2 MuiTypography-displayBlock"
          >
            Step 3 label
          </span>
        </span>
      </span>
      <div
        class="MuiStepContent-root MuiStepContent-last"
        icon="3"
      />
    </div>
  </div>
</div>
`;

exports[`Container component renders the component 1`] = `
<div
  class="makeStyles-root-1"
>
  <div
    class="MuiPaper-root MuiStepper-root MuiStepper-vertical MuiPaper-elevation0"
  >
    <div
      class="MuiStep-root MuiStep-vertical"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-vertical"
      >
        <span
          class="MuiStepLabel-iconContainer"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiStepIcon-root MuiStepIcon-active"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="12"
            />
            <text
              class="MuiStepIcon-text"
              text-anchor="middle"
              x="12"
              y="16"
            >
              1
            </text>
          </svg>
        </span>
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiStepLabel-active MuiTypography-body2 MuiTypography-displayBlock"
          >
            Step 1 label
          </span>
        </span>
      </span>
      <div
        class="MuiStepContent-root"
        icon="1"
      >
        <div
          class="MuiCollapse-container MuiStepContent-transition MuiCollapse-entered"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Step 1 description
              </p>
              <div
                class="makeStyles-actionsContainer-3"
              >
                <div>
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-2 Mui-disabled Mui-disabled"
                    data-testid="token-stepper-back"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Back
                    </span>
                  </button>
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-2 MuiButton-containedPrimary"
                    data-testid="token-stepper-next"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Next
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiStepConnector-root MuiStepConnector-vertical Mui-disabled"
    >
      <span
        class="MuiStepConnector-line MuiStepConnector-lineVertical"
      />
    </div>
    <div
      class="MuiStep-root MuiStep-vertical"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-vertical Mui-disabled"
      >
        <span
          class="MuiStepLabel-iconContainer"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiStepIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="12"
            />
            <text
              class="MuiStepIcon-text"
              text-anchor="middle"
              x="12"
              y="16"
            >
              2
            </text>
          </svg>
        </span>
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
          >
            Step 2 label
          </span>
        </span>
      </span>
      <div
        class="MuiStepContent-root"
        disabled=""
        icon="2"
      />
    </div>
    <div
      class="MuiStepConnector-root MuiStepConnector-vertical Mui-disabled"
    >
      <span
        class="MuiStepConnector-line MuiStepConnector-lineVertical"
      />
    </div>
    <div
      class="MuiStep-root MuiStep-vertical"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-vertical Mui-disabled"
      >
        <span
          class="MuiStepLabel-iconContainer"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiStepIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="12"
            />
            <text
              class="MuiStepIcon-text"
              text-anchor="middle"
              x="12"
              y="16"
            >
              3
            </text>
          </svg>
        </span>
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
          >
            Step 3 label
          </span>
        </span>
      </span>
      <div
        class="MuiStepContent-root MuiStepContent-last"
        disabled=""
        icon="3"
      />
    </div>
  </div>
</div>
`;
